--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,6 @@ workflows:
   sample:
     jobs:
       - build-and-test
-      
-      build-docker:
+      - build-docker:
         requires:
-        - build-and-test
-      filters:
-        branches:
-          only:
-            - master
+          - build-and-test
