--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - checkout
       - python/install-packages:
+          pip-dependency-file: requirements.txt
           pkg-manager: pip
       - run:
           name: Run tests pytest
