--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,14 @@ jobs:
           version: 20.10.14
       - run:
           name: Build Docker image
-          command: docker build -t $USER_NAME_DOCKER/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 .
+          command: docker build -t $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:$CIRCLE_SHA1 .
       - run:
           name: Push DockerHub
           command:
               echo $TOKEN_DOCKER | docker login -u $USER_NAME_DOCKER --password-stdin
-              docker tag $USER_NAME_DOCKER/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 $CIRCLE_PROJECT_REPONAME:latest
-              docker push $USER_NAME_DOCKER/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
-              docker push $USER_NAME_DOCKER/$CIRCLE_PROJECT_REPONAME:latest
+              docker tag $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:$CIRCLE_SHA1 $CIRCLE_PROJECT_REPONAME:latest
+              docker push $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:$CIRCLE_SHA1
+              docker push $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
 
 workflows:
   sample:
