update conf file circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,11 +56,11 @@ jobs:
           region: eu-west-3
           repo: projet_13_python-oc-lettings-fr
           tag: $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
-      - aws-ecr/push_image:
-          account_id: "615942929624"
-          region: eu-west-3
-          repo: projet_13_python-oc-lettings-fr
-          tag: $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
+      #- aws-ecr/push_image:
+      #    account_id: "615942929624"
+      #    region: eu-west-3
+      #    repo: projet_13_python-oc-lettings-fr
+      #    tag: $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
 
 workflows:
   sample:
