update conf file circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,21 +47,16 @@ jobs:
       - checkout
       - aws-ecr/build_and_push_image:
           account_id: "615942929624"
+          setup_remote_docker: True
           auth:
               - aws-cli/setup:
                   aws-access-key-id: AWS_ACCESS_KEY_ID
                   aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           dockerfile: dockerfile
           platform: linux/amd64
-          push_image: false
           region: eu-west-3
           repo: projet_13_python-oc-lettings-fr
           tag: $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
-      #- aws-ecr/push_image:
-      #    account_id: "615942929624"
-      #    region: eu-west-3
-      #    repo: projet_13_python-oc-lettings-fr
-      #    tag: $USER_NAME_DOCKER/projet_13_python-oc-lettings-fr:latest
 
 workflows:
   sample:
