--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,10 @@ jobs:
               - aws-cli/setup:
                   aws-access-key-id: AWS_ACCESS_KEY_ID
                   aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          create-repo: true
           dockerfile: dockerfile
           platform: linux/amd64
-          region: eu-west-3
+          region: us-east-1
           repo: projet_13_python-oc-lettings-fr
           tag: latest
 
