--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,8 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.14
       #- aws-ecr/build_and_push_image:
       #    account_id: "615942929624"
       #    setup_remote_docker: true
