update conf file circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
          name: Update task 
-        #  public.ecr.aws/k4x1n9q9/projet_13_python-oc-lettings-fr:latest
+        #  aws ecs register-task-definition --family Tache_projet_13 --network-mode awsvpc --requires-compatibilities FARGATE --cpu 512 --memory 1024 --container-definitions '[{"name":"projet_13_python-oc-lettings-fr","image":"public.ecr.aws/k4x1n9q9/projet_13_python-oc-lettings-fr:latest","cpu":512,"memory":1024}]'
          command: aws ecs register-task-definition --family $AWS_FAMILY_TASK --network-mode awsvpc --requires-compatibilities FARGATE --cpu 512 --memory 1024 --container-definitions '[{"name":"projet_13_python-oc-lettings-fr","image":"'$REGISTRY_AWS:$CIRCLE_SHA1'","cpu":512,"memory":1024}]'
       #- run:
       #   name: Update service
