--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           command: docker build -t $REGISTRY_AWS:$CIRCLE_SHA1 .
       - run:
           name: Connection docker to AWS ECR
-          command: aws ecr-public get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_CMD_LOGIN_REGISTRY
+          command: aws ecr-public get-login-password --region $AWS_REGION_REPO | docker login --username AWS --password-stdin $AWS_CMD_LOGIN_REGISTRY
       - run:
           name: Push AWS ECR
           command: |
