--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,11 +72,10 @@ jobs:
       - run:
          name: Update task
          
-         command: aws ecs register-task-definition --debug --region $AWS_REGION --family $AWS_FAMILY_TASK --network-mode awsvpc --requires-compatibilities FARGATE --cpu 512 --memory 1024 --container-definitions '[{"name":"projet_13_python-oc-lettings-fr","image":"'$REGISTRY_AWS:$CIRCLE_SHA1'","cpu":512,"memory":1024}]'
+         command: aws ecs register-task-definition --debug --region $AWS_REGION --family $AWS_FAMILY_TASK --execution-role-arn $AWS_EXECUTION_ROLE_ARN --network-mode awsvpc --requires-compatibilities FARGATE --cpu 512 --memory 1024 --container-definitions '[{"name":"projet_13_python-oc-lettings-fr","image":"'$REGISTRY_AWS:$CIRCLE_SHA1'","cpu":512,"memory":1024,"logConfiguration":{"logDriver":"awslogs","options":{"awslogs-region":$AWS_REGION,"awslogs-group":"13-container","awslogs-create-group":"true","awslogs-stream-prefix":"13"}},"portMappings":[{"name":"projet_13_python-oc-lettings-fr-80-tcp","containerPort":80,"hostPort":80,"protocol":"tcp","appProtocol":"http","containerPort":80}]}]'
       - run:
          name: Update service
-         command: aws ecs update-service --region $AWS_REGION --cluster $AWS_CLUSTER --service $AWS_SERVICE --task-definition $AWS_FAMILY_TASK --network-configuration {"awsvpcConfiguration":{"subnets":["subnet-07d24d6b46aea4e37",],"securityGroups":["sg-01abe1ca938018477",],"assignPublicIp":"ENABLED"}}
-      
+         command: aws ecs update-service --region $AWS_REGION --cluster $AWS_CLUSTER --service $AWS_SERVICE --task-definition $AWS_FAMILY_TASK --network-configuration '{"awsvpcConfiguration":{"subnets":[$AWS_SUBNET],"securityGroups":[$AWS_SECURITY_GRP],"assignPublicIp":"ENABLED"}}'
 
 workflows:
   sample:
