--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
           name: Build Docker image
-          command: docker build -t $REGISTRY_AWS:$CIRCLE_SHA1 .
+          command: docker build --build-arg SENTRY_URL=$SENTRY_URL -t $REGISTRY_AWS:$CIRCLE_SHA1 .
       - run:
           name: Connection docker to AWS ECR
           command: aws ecr-public get-login-password --region $AWS_REGION_REPO | docker login --username AWS --password-stdin $AWS_CMD_LOGIN_REGISTRY
